issue-195 use different source for Ubuntu fonts that also works on firefox

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -26,7 +26,7 @@
 @dropdown-bg: #3b4246;
 @dropdown-link-color: #ffffff;
 
-@font-family-sans-serif: Ubuntu Light;
+@font-family-sans-serif: Ubuntu;
 
 // app toolbar height
 @app-toolbar-height: @navbar-height;
